--- a/projects/static/projects/css/style.css
+++ b/projects/static/projects/css/style.css
@@ -741,25 +741,24 @@ p.res-strengths {
 /* The Modal (background) */
 #pdfModal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 5000;
-    /* Sit on top */
-    padding-top: 0;
-    /* Location of the box */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/ opacity */
+    padding: 40px 0 0;
+    box-sizing: border-box;
+}
+
+#pdfModal .modal-content {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0;
+    border: none;
 }
 
 /* Modal Content (Image) */
